--- a/Transporte/pom.xml
+++ b/Transporte/pom.xml
@@ -57,6 +57,11 @@
     <artifactId>mariadb-java-client</artifactId>
     <version>1.1.7</version>
 </dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version>
+		</dependency>
 	</dependencies>
 
 	<build>
