se agrego @JsonIgnoreProperties para obtener el getid

--- a/Transporte/src/main/resources/application.properties
+++ b/Transporte/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
