--- a/Transporte/pom.xml
+++ b/Transporte/pom.xml
@@ -66,6 +66,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.13</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>			
+		</dependency>
 	</dependencies>
 
 	<build>
