--- a/Transporte/src/main/resources/application.properties
+++ b/Transporte/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.generate-ddl=false
 spring.datasource.url=jdbc:mysql://localhost:3306/transportedb
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
