--- a/Transporte/src/main/resources/application.properties
+++ b/Transporte/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
+
+spring.servlet.multipart.enabled=true
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
