--- a/Transporte/src/main/resources/application.properties
+++ b/Transporte/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.jpa.generate-ddl=false
 spring.datasource.url=jdbc:mysql://localhost:3306/transportedb
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=2006702231
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 
 spring.servlet.multipart.enabled=true
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#spring.jackson.serialization.write-dates-as-timestamps=false
+#spring.jackson.deserialization.fail-on-unknown-properties = true
