--- a/Transporte/pom.xml
+++ b/Transporte/pom.xml
@@ -6,10 +6,12 @@
 
 	<groupId>gitech.com</groupId>
 	<artifactId>Transporte</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<name>Transporte</name>	
+	<version>1</version>
+	<packaging>war</packaging>
+	
 
-	<name>Transporte</name>
+	
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -53,29 +55,58 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.5</version>
+<!-- 			<version>2.8.5</version> -->
 		</dependency>
 
-		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
-			<version>1.1.7</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.mariadb.jdbc</groupId> -->
+<!-- 			<artifactId>mariadb-java-client</artifactId> -->
+<!-- 			<version>1.1.7</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.13</version>
+<!-- 			<version>5.1.47</version> -->
+<!-- 			8.0.13 -->
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.9.8</version>
+<!-- 			<version>2.8.11</version> -->
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.8.6</version>
+<!-- 			<version>2.8.11.3</version> -->
 		</dependency>
+<!-- 		<dependency> -->
+<!--     <groupId>org.apache.commons</groupId> -->
+<!--     <artifactId>commons-lang3</artifactId> -->
+<!--     <version>3.4</version> -->
+<!-- </dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot-maven-plugin</artifactId> -->
+<!-- 			<version>2.1.1.BUILD-SNAPSHOT</version> -->
+<!-- 			<type>maven-plugin</type> -->
+<!-- 		</dependency> -->
+<!-- para despliegue  -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+<!-- 		<dependency> -->
+<!--     <groupId>org.springframework</groupId> -->
+<!--     <artifactId>spring-websocket</artifactId> -->
+<!--     <version>4.2.4.RELEASE</version> -->
+<!-- </dependency> -->
+ 
+<!-- <dependency> -->
+<!--     <groupId>org.springframework</groupId> -->
+<!--     <artifactId>spring-messaging</artifactId> -->
+<!--     <version>4.2.4.RELEASE</version> -->
+<!-- </dependency>		 -->
 	</dependencies>
 
 	<build>
@@ -83,6 +114,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				
 			</plugin>
 		</plugins>
 	</build>
