--- a/Transporte/src/main/resources/application.properties
+++ b/Transporte/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=false
 #spring.datasource.url=jdbc:mariadb://localhost:3306/transportedb
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/transportedb
+spring.datasource.url=jdbc:mysql://localhost:3306/transportedb?verifyServerCertificate=false&useSSL=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
